WebCore/platform/graphics/win/FontCustomPlatformData.h
@@ -22,6 +22,7 @@
 #define FontCustomPlatformData_h
 
 #include "FontRenderingMode.h"
+#include "PlatformString.h"
 #include <wtf/Noncopyable.h>
 
 typedef struct CGFont* CGFontRef;
@@ -32,9 +33,10 @@ class FontPlatformData;
 class SharedBuffer;
 
 struct FontCustomPlatformData : Noncopyable {
-    FontCustomPlatformData(CGFontRef cgFont, HANDLE fontReference = 0)
+    FontCustomPlatformData(CGFontRef cgFont, HANDLE fontReference, const String& name)
         : m_cgFont(cgFont)
         , m_fontReference(fontReference)
+        , m_name(name)
     {
     }
 
@@ -44,6 +46,7 @@ struct FontCustomPlatformData : Noncopyable {
 
     CGFontRef m_cgFont;
     HANDLE m_fontReference;
+    String m_name;
 };
 
 FontCustomPlatformData* createFontCustomPlatformData(SharedBuffer*);
