WebCore/platform/graphics/win/OpenTypeUtilities.h
@@ -23,9 +23,10 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#ifndef GetEOTHeader_h
-#define GetEOTHeader_h
+#ifndef OpenTypeUtilities_h
+#define OpenTypeUtilities_h
 
+#include "PlatformString.h"
 #include <wtf/Forward.h>
 
 namespace WebCore {
@@ -33,7 +34,8 @@ namespace WebCore {
 class SharedBuffer;
 
 bool getEOTHeader(SharedBuffer* fontData, Vector<UInt8, 512>& eotHeader, size_t& overlayDst, size_t& overlaySrc, size_t& overlayLength);
+HANDLE renameAndActivateFont(SharedBuffer*, const String&);
 
 } // namespace WebCore
 
-#endif // GetEOTHeader_h
+#endif // OpenTypeUtilities_h
